k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudmart-prod
  labels:
    name: cloudmart-prod
    app: cloudmart
    environment: production
    Project: cloudmart
    Team: Team-Pixels
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
---
apiVersion: v1
kind: Namespace
metadata:
  name: cloudmart-staging
  labels:
    name: cloudmart-staging
    app: cloudmart
    environment: staging
    Project: cloudmart
    Team: Team-Pixels
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
