k8s/product-service-canary.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: product-service
  namespace: cloudmart-prod
  labels:
    app: product-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
      annotations:
        rollout.argoproj.io/restart: "2026-06-20T04:33:00Z"
    spec:
      serviceAccountName: product-service-sa
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: product-service
        image: 537090271991.dkr.ecr.us-east-1.amazonaws.com/product-service:latest
        ports:
        - containerPort: 8001
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
          runAsNonRoot: true
          runAsUser: 1000
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 256Mi
        readinessProbe:
          httpGet:
            path: /ready
            port: 8001
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8001
          initialDelaySeconds: 10
          periodSeconds: 30
  strategy:
    canary:
      stableService: product-service
      canaryService: product-service-canary
      steps:
        - setWeight: 10
        - pause: { duration: 1m }
        - setWeight: 50
        - pause: { duration: 1m }
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: cloudmart-prod
spec:
  selector:
    app: product-service
  ports:
  - port: 8001
    targetPort: 8001
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: product-service-canary
  namespace: cloudmart-prod
spec:
  selector:
    app: product-service
  ports:
  - port: 8001
    targetPort: 8001
  type: ClusterIP
